# ProtonEngine

./: .gitignore  LICENSE  README.md
Proton Engine/: CMakeLists.txt  glad.c  main.cpp
Proton Engine.xcodeproj/: project.pbxproj
Proton Engine.xcodeproj/project.xcworkspace/xcuserdata/vibingcatt.xcuserdatad/: UserInterfaceState.xcuserstate
Proton Engine.xcodeproj/xcshareddata/xcschemes/: Proton Engine.xcscheme
Proton Engine.xcodeproj/xcuserdata/vibingcatt.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Proton Engine.xcodeproj/xcuserdata/vibingcatt.xcuserdatad/xcschemes/: xcschememanagement.plist
Proton Engine/lib/ProtonEngine/: protonEngine.cpp  protonEngine.h
Proton Engine/src/: Application.h  Audio.cpp  Audio.h  MapParser.cpp  MapParser.h  Models.cpp  Models.h  application.cpp  glad.c  glad.h  main.cpp  metalBridge.mm  shaderManager.cpp  shaderManager.h  shapes.cpp  shapes.h  shapes_renderer.cpp  shapes_renderer.h
Proton Engine/src/resources/maps/: Basic.amap  Basic.pmap  map.pmap
Proton Engine/src/resources/objects/: Platform.pobj
Proton Engine/src/resources/shaders/: Image.glsl  basic.glsl  hitbox.glsl  skybox.glsl
Versions/Proton Engine v0.1/: Proton Engine
Versions/Proton Engine v0.1/resources/shaders/: basic.glsl
Versions/Proton Engine v0.2 Alpha/: Proton Engine  imgui.ini
Versions/Proton Engine v0.2 Alpha/resources/maps/: Stupid.pmap
docs/: Proton Scripts  Proton Scripts.md  ProtonMaps.md
